--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,38 @@ body {
     text-wrap: balance;
   }
 }
+.vector {
+  fill: #414042;
+}
+
+.xmlid_22_ {
+  fill: #414042;
+}
+
+.xmlid_87_ {
+  fill: #414042;
+}
+
+.xmlid_136_ {
+  fill: #414042;
+}
+
+.contact-1 {
+  letter-spacing: 1.65px;
+}
+
+.rectangle_92 {
+  transform: rotate(-90deg);
+}
+
+.rectangle_93 {
+  transform: rotate(-90deg);
+}
+
+.rectangle_94 {
+  transform: rotate(-90deg);
+}
+
+.rectangle_95 {
+  transform: rotate(-90deg);
+}
